--- a/compose.yaml
+++ b/compose.yaml
@@ -9,6 +9,9 @@ services:
     depends_on:
       - backend
       - frontend
+      - mongo
+      - mongo-express
+
   frontend:
     image: "node:22"
     user: "node"
@@ -19,10 +22,13 @@ services:
     volumes:
       - ./frontend/:/home/node/app
     expose:
-      - "3000"
+      - "3002"
     ports:
-      - "3000:3000"
+      - "3001:3002"
     command: "npm start"
+    depends_on:
+      - backend
+
   backend:
     image: todo-app/backend
     build: ./backend
@@ -38,3 +44,31 @@ services:
     env_file:
       - path: ./.env
         required: true
+    depends_on:
+      - mongo
+      - mongo-express
+
+  mongo:
+    image: mongo:4.4
+    restart: always
+    ports:
+      - 27017:27017
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=example
+      - MONGO_INITDB_DATABASE=test_db
+    volumes:
+      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
+      ME_CONFIG_BASICAUTH: false
+    depends_on:
+      - mongo
